--- a/resources/docco.css
+++ b/resources/docco.css
@@ -22,11 +22,15 @@ p {
       margin: 0 30px 26px 0;
       overflow: hidden;
     }
+      .doc pre {
+        margin: 15px 0 15px;
+        padding-left: 15px;
+      }
     .code {
       float: left;
       margin: 4px 0 26px 0;
     }
-      .code pre {
+      pre {
         font-size: 12px; line-height: 18px;
         font-family: Monaco, Consolas, "Lucida Console", monospace;
         margin: 0; padding: 0;
@@ -39,7 +43,7 @@ span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }
 body .hll { background-color: #ffffcc }
 body .c { color: #408080; font-style: italic }  /* Comment */
 /*body .err { border: 1px solid #FF0000 }         /* Error */
-body .k { color: #008000 }                      /* Keyword */
+body .k { color: #954121 }                      /* Keyword */
 body .o { color: #666666 }                      /* Operator */
 body .cm { color: #408080; font-style: italic } /* Comment.Multiline */
 body .cp { color: #BC7A00 }                     /* Comment.Preproc */
@@ -55,16 +59,16 @@ body .gp { color: #000080; font-weight: bold }  /* Generic.Prompt */
 body .gs { font-weight: bold }                  /* Generic.Strong */
 body .gu { color: #800080; font-weight: bold }  /* Generic.Subheading */
 body .gt { color: #0040D0 }                     /* Generic.Traceback */
-body .kc { color: #008000 }                     /* Keyword.Constant */
-body .kd { color: #008000; font-weight: bold }  /* Keyword.Declaration */
-body .kn { color: #008000; font-weight: bold }  /* Keyword.Namespace */
-body .kp { color: #008000 }                     /* Keyword.Pseudo */
-body .kr { color: #008000; font-weight: bold }  /* Keyword.Reserved */
+body .kc { color: #954121 }                     /* Keyword.Constant */
+body .kd { color: #954121; font-weight: bold }  /* Keyword.Declaration */
+body .kn { color: #954121; font-weight: bold }  /* Keyword.Namespace */
+body .kp { color: #954121 }                     /* Keyword.Pseudo */
+body .kr { color: #954121; font-weight: bold }  /* Keyword.Reserved */
 body .kt { color: #B00040 }                     /* Keyword.Type */
 body .m { color: #666666 }                      /* Literal.Number */
-body .s { color: #BA2121 }                      /* Literal.String */
+body .s { color: #219161 }                      /* Literal.String */
 body .na { color: #7D9029 }                     /* Name.Attribute */
-body .nb { color: #008000 }                     /* Name.Builtin */
+body .nb { color: #954121 }                     /* Name.Builtin */
 body .nc { color: #0000FF; font-weight: bold }  /* Name.Class */
 body .no { color: #880000 }                     /* Name.Constant */
 body .nd { color: #AA22FF }                     /* Name.Decorator */
@@ -73,27 +77,27 @@ body .ne { color: #D2413A; font-weight: bold }  /* Name.Exception */
 body .nf { color: #0000FF }                     /* Name.Function */
 body .nl { color: #A0A000 }                     /* Name.Label */
 body .nn { color: #0000FF; font-weight: bold }  /* Name.Namespace */
-body .nt { color: #008000; font-weight: bold }  /* Name.Tag */
-body .nv { color: #19177C }                     /* Name.Variable */
+body .nt { color: #954121; font-weight: bold }  /* Name.Tag */
+body .nv { color: #19469D }                     /* Name.Variable */
 body .ow { color: #AA22FF; font-weight: bold }  /* Operator.Word */
 body .w { color: #bbbbbb }                      /* Text.Whitespace */
 body .mf { color: #666666 }                     /* Literal.Number.Float */
 body .mh { color: #666666 }                     /* Literal.Number.Hex */
 body .mi { color: #666666 }                     /* Literal.Number.Integer */
 body .mo { color: #666666 }                     /* Literal.Number.Oct */
-body .sb { color: #BA2121 }                     /* Literal.String.Backtick */
-body .sc { color: #BA2121 }                     /* Literal.String.Char */
-body .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
-body .s2 { color: #BA2121 }                     /* Literal.String.Double */
+body .sb { color: #219161 }                     /* Literal.String.Backtick */
+body .sc { color: #219161 }                     /* Literal.String.Char */
+body .sd { color: #219161; font-style: italic } /* Literal.String.Doc */
+body .s2 { color: #219161 }                     /* Literal.String.Double */
 body .se { color: #BB6622; font-weight: bold }  /* Literal.String.Escape */
-body .sh { color: #BA2121 }                     /* Literal.String.Heredoc */
+body .sh { color: #219161 }                     /* Literal.String.Heredoc */
 body .si { color: #BB6688; font-weight: bold }  /* Literal.String.Interpol */
-body .sx { color: #008000 }                     /* Literal.String.Other */
+body .sx { color: #954121 }                     /* Literal.String.Other */
 body .sr { color: #BB6688 }                     /* Literal.String.Regex */
-body .s1 { color: #BA2121 }                     /* Literal.String.Single */
-body .ss { color: #19177C }                     /* Literal.String.Symbol */
-body .bp { color: #008000 }                     /* Name.Builtin.Pseudo */
-body .vc { color: #19177C }                     /* Name.Variable.Class */
-body .vg { color: #19177C }                     /* Name.Variable.Global */
-body .vi { color: #19177C }                     /* Name.Variable.Instance */
+body .s1 { color: #219161 }                     /* Literal.String.Single */
+body .ss { color: #19469D }                     /* Literal.String.Symbol */
+body .bp { color: #954121 }                     /* Name.Builtin.Pseudo */
+body .vc { color: #19469D }                     /* Name.Variable.Class */
+body .vg { color: #19469D }                     /* Name.Variable.Global */
+body .vi { color: #19469D }                     /* Name.Variable.Instance */
 body .il { color: #666666 }                     /* Literal.Number.Integer.Long */
