adding Underscore's micro-templating function to Docco, so we can start cleaning things up with templates, and adding IDs to each section, so that you can reference them from the URL

--- a/resources/docco.css
+++ b/resources/docco.css
@@ -23,7 +23,7 @@ table td {
     .divider {
       clear: both;
     }
-    td.doc, th.doc {
+    td.docs, th.docs {
       max-width: 500px;
       min-width: 500px;
       min-height: 5px;
@@ -32,7 +32,7 @@ table td {
       vertical-align: top;
       text-align: left;
     }
-      .doc pre {
+      .docs pre {
         margin: 15px 0 15px;
         padding-left: 15px;
       }
