--- a/resources/docco.css
+++ b/resources/docco.css
@@ -89,10 +89,10 @@ table td {
       font-size: 12px;
       padding: 0 0.2em;
     }
-    .octowrap {
+    .pilwrap {
       position: relative;
     }
-      .octothorpe {
+      .pilcrow {
         font: 12px Arial;
         text-decoration: none;
         color: #454545;
@@ -102,7 +102,7 @@ table td {
         opacity: 0;
         -webkit-transition: opacity 0.2s linear;
       }
-        td.docs:hover .octothorpe {
+        td.docs:hover .pilcrow {
           opacity: 1;
         }
   td.code, th.code {
