Overflow x on the docs half.

--- a/resources/docco.css
+++ b/resources/docco.css
@@ -76,6 +76,7 @@ table td {
     min-width: 450px;
     min-height: 5px;
     padding: 10px 25px 1px 50px;
+    overflow-x: hidden;
     vertical-align: top;
     text-align: left;
   }
