--- a/resources/docco.css
+++ b/resources/docco.css
@@ -43,25 +43,25 @@ h1, h2, h3, h4, h5, h6 {
 #jump_to, #jump_wrapper {
   position: fixed;
   right: 0; top: 0;
-  padding: 5px 10px;
+  padding: 5px 20px;
 }
   #jump_wrapper {
     padding: 0;
     display: none;
-    overflow: auto;
-    max-width: 100%;
-    max-height: 100%;
   }
     #jump_to:hover #jump_wrapper {
       display: block;
     }
     #jump_page {
+      overflow: auto;
+      max-width: 300px;
+      max-height: 300px;
       padding: 5px 0 3px;
       margin: 0 0 25px 25px;
     }
       #jump_page .source {
         display: block;
-        padding: 5px 10px;
+        padding: 5px 20px;
         text-decoration: none;
         border-top: 1px solid #eee;
       }
