Show pilcrows on keyboard focus.

--- a/resources/docco.css
+++ b/resources/docco.css
@@ -103,6 +103,7 @@ table td {
         opacity: 0;
         -webkit-transition: opacity 0.2s linear;
       }
+        td.docs .pilcrow:focus,
         td.docs:hover .pilcrow {
           opacity: 1;
         }
